[gd_scene load_steps=42 format=2]

[ext_resource path="res://assets/background.jpg" type="Texture" id=1]
[ext_resource path="res://assets/background Kopie.jpg" type="Texture" id=2]
[ext_resource path="res://scenes/Ordner.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Input_field.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Ordner_rot.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Fall 1/Input_field_Fall1_gelb.gd" type="Script" id=6]
[ext_resource path="res://scenes/Tabs Fall 1/note_Telefonnummern.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/Fall 1/Fall1.gd" type="Script" id=8]
[ext_resource path="res://scenes/Tabs Fall 1/Cäsarohne4.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/TippEffekt.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/Fall 1/Fall1Text.gd" type="Script" id=11]
[ext_resource path="res://scenes/Ordner_gelb.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/tips colleague.png" type="Texture" id=13]
[ext_resource path="res://assets/MusikSounds/rclick-13693.mp3" type="AudioStream" id=14]
[ext_resource path="res://assets/MusikSounds/detective-15646.mp3" type="AudioStream" id=15]
[ext_resource path="res://assets/MusikSounds/text-sound-4-30218.mp3" type="AudioStream" id=16]
[ext_resource path="res://scenes/Pausemenu.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/Levelende.tscn" type="PackedScene" id=18]
[ext_resource path="res://scripts/Fall 1/Input_field_Fall1_rot.gd" type="Script" id=19]
[ext_resource path="res://scripts/Fall 1/Levelende_Fall1.gd" type="Script" id=20]
[ext_resource path="res://scenes/Tabs Fall 1/CäsarVerschlüsselung.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/Tabs Fall 1/PasswörterArtikel.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/Tabs Fall 1/Zahlenstrahl1_kurz.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/Tabs Fall 1/Zahlenstrahl2_lang.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/Tabs Fall 1/Cäsarmit4.tscn" type="PackedScene" id=25]

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 32, 273 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 528, 10 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 528, 10 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 24, 277 )

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 25.5, 273 )

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, 504 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 504 ), Vector2( 22, 504 ) ]
}

[sub_resource type="Animation" id=26]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 928, 48 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 928, 48 ), Vector2( 938, 48 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 40, 268 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 39.5, 273 )

[sub_resource type="Animation" id=34]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.713726, 0.0901961, 0.0901961, 0 ) ]
}

[sub_resource type="Animation" id=35]
resource_name = "wrong"
length = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.713726, 0.0901961, 0.0901961, 0 ), Color( 0.713726, 0.0901961, 0.0901961, 0.32549 ), Color( 0.713726, 0.0901961, 0.0901961, 0 ) ]
}

[sub_resource type="Animation" id=38]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.713726, 0.0901961, 0.0901961, 0 ) ]
}

[sub_resource type="Animation" id=39]
resource_name = "right"
length = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0901961, 0.713726, 0.0980392, 0 ), Color( 0.0901961, 0.713726, 0.0980392, 0.47451 ), Color( 0.0901961, 0.713726, 0.0980392, 0 ) ]
}

[sub_resource type="Animation" id=40]
resource_name = "wrong"
length = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.713726, 0.0901961, 0.0901961, 0 ), Color( 0.713726, 0.0901961, 0.0901961, 0.32549 ), Color( 0.713726, 0.0901961, 0.0901961, 0 ) ]
}

[node name="Fall1" type="Node2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="BackgroundLeft" type="TextureRect" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 540.0
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_lock_": true
}

[node name="Ordner" type="Node2D" parent="BackgroundLeft"]

[node name="Ordner_Links_1" type="Node2D" parent="BackgroundLeft/Ordner"]

[node name="Ordner" parent="BackgroundLeft/Ordner/Ordner_Links_1" instance=ExtResource( 3 )]
visible = false
position = Vector2( 376, 300 )
rotation = 1.5708

[node name="Tab" parent="BackgroundLeft/Ordner/Ordner_Links_1" instance=ExtResource( 22 )]
visible = false
position = Vector2( 231, 300 )
rotation = 1.5708
scale = Vector2( 0.7, 0.7 )

[node name="Ordner_Links_2" type="Node2D" parent="BackgroundLeft/Ordner"]

[node name="Ordner" parent="BackgroundLeft/Ordner/Ordner_Links_2" instance=ExtResource( 3 )]
visible = false
position = Vector2( 376, 200 )
rotation = 1.5708

[node name="Tab" parent="BackgroundLeft/Ordner/Ordner_Links_2" instance=ExtResource( 21 )]
visible = false
position = Vector2( 231, 200 )
rotation = 1.5708
scale = Vector2( 0.7, 0.7 )

[node name="Ordner_Links_3" type="Node2D" parent="BackgroundLeft/Ordner"]

[node name="Ordner" parent="BackgroundLeft/Ordner/Ordner_Links_3" instance=ExtResource( 3 )]
visible = false
position = Vector2( 276, 200 )
rotation = 1.5708

[node name="Tab" parent="BackgroundLeft/Ordner/Ordner_Links_3" instance=ExtResource( 25 )]
visible = false
position = Vector2( 150, 200 )
rotation = 1.5708
scale = Vector2( 0.075, 0.075 )

[node name="Ordner_Links_4" type="Node2D" parent="BackgroundLeft/Ordner"]

[node name="Ordner" parent="BackgroundLeft/Ordner/Ordner_Links_4" instance=ExtResource( 3 )]
visible = false
position = Vector2( 276, 300 )
rotation = 1.5708

[node name="Tab" parent="BackgroundLeft/Ordner/Ordner_Links_4" instance=ExtResource( 24 )]
visible = false
position = Vector2( 217, 300 )
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )

[node name="Ordner_Links_5" type="Node2D" parent="BackgroundLeft/Ordner"]

[node name="Ordner" parent="BackgroundLeft/Ordner/Ordner_Links_5" instance=ExtResource( 3 )]
visible = false
position = Vector2( 276, 100 )
rotation = 1.5708

[node name="Tab" parent="BackgroundLeft/Ordner/Ordner_Links_5" instance=ExtResource( 23 )]
visible = false
position = Vector2( 217, 100 )
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )

[node name="Ordner_Links_Gelb" type="Node2D" parent="BackgroundLeft"]

[node name="Ordner" parent="BackgroundLeft/Ordner_Links_Gelb" instance=ExtResource( 12 )]
visible = false
position = Vector2( 376, 100 )
rotation = 1.5708

[node name="Tab" parent="BackgroundLeft/Ordner_Links_Gelb" instance=ExtResource( 4 )]
visible = false
position = Vector2( 415, 8 )
rotation = 1.5708
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="BackgroundLeft"]
margin_left = 410.0
margin_top = -22.0
margin_right = 532.0
margin_bottom = 540.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="BackgroundRight" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 480.0
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
mouse_default_cursor_shape = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_lock_": true
}

[node name="Ordner" type="Node2D" parent="BackgroundRight"]

[node name="Ordner_Rechts_1" type="Node2D" parent="BackgroundRight/Ordner"]

[node name="Ordner" parent="BackgroundRight/Ordner/Ordner_Rechts_1" instance=ExtResource( 3 )]
visible = false
position = Vector2( 104, 340 )
rotation = 4.71239

[node name="Tab" parent="BackgroundRight/Ordner/Ordner_Rechts_1" instance=ExtResource( 21 )]
visible = false
position = Vector2( 250, 340 )
rotation = 4.71239
scale = Vector2( 0.7, 0.7 )

[node name="Ordner_Rechts_2" type="Node2D" parent="BackgroundRight/Ordner"]

[node name="Ordner" parent="BackgroundRight/Ordner/Ordner_Rechts_2" instance=ExtResource( 3 )]
visible = false
position = Vector2( 104, 240 )
rotation = 4.71239

[node name="Tab" parent="BackgroundRight/Ordner/Ordner_Rechts_2" instance=ExtResource( 22 )]
visible = false
position = Vector2( 250, 240 )
rotation = 4.71239
scale = Vector2( 0.7, 0.7 )

[node name="Ordner_Rechts_3" type="Node2D" parent="BackgroundRight/Ordner"]

[node name="Ordner" parent="BackgroundRight/Ordner/Ordner_Rechts_3" instance=ExtResource( 3 )]
visible = false
position = Vector2( 204, 240 )
rotation = 4.71239

[node name="Tab" parent="BackgroundRight/Ordner/Ordner_Rechts_3" instance=ExtResource( 25 )]
visible = false
position = Vector2( 330, 240 )
rotation = 4.71239
scale = Vector2( 0.075, 0.075 )

[node name="Ordner_Rechts_4" type="Node2D" parent="BackgroundRight/Ordner"]

[node name="Ordner" parent="BackgroundRight/Ordner/Ordner_Rechts_4" instance=ExtResource( 3 )]
visible = false
position = Vector2( 204, 340 )
rotation = 4.71239

[node name="Tab" parent="BackgroundRight/Ordner/Ordner_Rechts_4" instance=ExtResource( 7 )]
visible = false
position = Vector2( 319, 340 )
rotation = 4.71239
scale = Vector2( 0.3, 0.3 )

[node name="Ordner_Rechts_5" type="Node2D" parent="BackgroundRight/Ordner"]

[node name="Ordner" parent="BackgroundRight/Ordner/Ordner_Rechts_5" instance=ExtResource( 3 )]
visible = false
position = Vector2( 104, 440 )
rotation = -1.5708

[node name="Tab" parent="BackgroundRight/Ordner/Ordner_Rechts_5" instance=ExtResource( 9 )]
visible = false
position = Vector2( 240, 440 )
rotation = 4.71239
scale = Vector2( 0.075, 0.075 )

[node name="Ordner_Rechts_Rot" type="Node2D" parent="BackgroundRight"]

[node name="Ordner" parent="BackgroundRight/Ordner_Rechts_Rot" instance=ExtResource( 5 )]
visible = false
position = Vector2( 204, 440 )
rotation = 4.71239

[node name="Tab" parent="BackgroundRight/Ordner_Rechts_Rot" instance=ExtResource( 4 )]
visible = false
position = Vector2( 48, 528 )
rotation = 4.71239
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 19 )

[node name="ColorRect" type="ColorRect" parent="BackgroundRight"]
margin_left = -63.0
margin_top = -2.0
margin_right = 65.0
margin_bottom = 560.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 448.0
margin_top = -8.0
margin_right = 512.0
margin_bottom = 544.0
color = Color( 0, 0, 0, 1 )

[node name="Area2D" type="Area2D" parent="ColorRect"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Area2D"]
position = Vector2( 32, 279 )
shape = SubResource( 29 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ColorRect/Area2D"]
position = Vector2( 24, 0 )
shape = SubResource( 30 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="ColorRect/Area2D"]
position = Vector2( 24, 560 )
shape = SubResource( 31 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="ColorRect/Area2D"]
position = Vector2( -472, 275 )
shape = SubResource( 32 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="ColorRect/Area2D"]
position = Vector2( 544, 280 )
shape = SubResource( 33 )

[node name="TimeLabelLeft" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 466.0
margin_top = 230.0
margin_right = 506.0
margin_bottom = 244.0
rect_rotation = 90.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "00:00"
align = 1
valign = 1

[node name="TimeLabelRight" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 494.0
margin_top = 270.0
margin_right = 534.0
margin_bottom = 284.0
rect_rotation = 270.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "00:00"
align = 1
valign = 1

[node name="ScoreTimer" type="Timer" parent="."]

[node name="Textbox" type="Control" parent="."]
margin_right = 40.0
script = ExtResource( 11 )

[node name="Polygon2D" type="Polygon2D" parent="Textbox"]
position = Vector2( -17.7778, -16.4923 )
scale = Vector2( 1.22222, 1.06154 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 8, 8, 80, 8, 80, 528, 8, 528 )

[node name="Icon" type="Sprite" parent="Textbox/Polygon2D"]
position = Vector2( 62, 42 )
rotation = 1.5708
scale = Vector2( 0.025, 0.025 )
texture = ExtResource( 13 )

[node name="Polygon2D2" type="Polygon2D" parent="Textbox"]
position = Vector2( 870.222, -16.6154 )
scale = Vector2( 1.22222, 1.07692 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 8, 8, 80, 8, 80, 528, 8, 528 )

[node name="Icon2" type="Sprite" parent="Textbox/Polygon2D2"]
position = Vector2( 25, 494 )
rotation = -1.5708
scale = Vector2( 0.025, 0.025 )
texture = ExtResource( 13 )

[node name="RichTextLabel" type="RichTextLabel" parent="Textbox"]
margin_left = 64.0
margin_top = 112.0
margin_right = 442.0
margin_bottom = 160.0
rect_rotation = 90.0
mouse_filter = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="Textbox"]
margin_left = 896.0
margin_top = 432.0
margin_right = 1271.0
margin_bottom = 472.0
rect_rotation = -90.0
mouse_filter = 2

[node name="Tween" type="Tween" parent="Textbox"]

[node name="DialogPfeil" type="Polygon2D" parent="Textbox"]
position = Vector2( 32, 504 )
rotation = 1.5708
scale = Vector2( 1.0625, 1 )
color = Color( 0.996078, 0.945098, 0.737255, 1 )
offset = Vector2( -135.529, -135 )
polygon = PoolVector2Array( 128, 128, 144, 128, 136, 144 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Textbox/DialogPfeil"]
autoplay = "idle"
anims/RESET = SubResource( 24 )
anims/idle = SubResource( 25 )

[node name="DialogPfeil2" type="Polygon2D" parent="Textbox"]
position = Vector2( 928, 48 )
rotation = -1.5708
scale = Vector2( 1.0625, 1 )
color = Color( 0.996078, 0.945098, 0.737255, 1 )
offset = Vector2( -135.904, -132.702 )
polygon = PoolVector2Array( 128, 128, 144, 128, 136, 144 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Textbox/DialogPfeil2"]
autoplay = "idle"
anims/RESET = SubResource( 26 )
anims/idle = SubResource( 27 )

[node name="TutBox" type="Area2D" parent="Textbox"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Textbox/TutBox"]
position = Vector2( 40, 268 )
shape = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Textbox/TutBox"]
position = Vector2( 919.5, 271 )
shape = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="Textblub" type="AudioStreamPlayer2D" parent="Textbox"]
stream = ExtResource( 16 )
volume_db = -20.0
bus = "SFX"

[node name="BGM Tutorial" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = -20.0
bus = "Music"

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = -15.0
bus = "SFX"

[node name="Pause" type="Button" parent="."]
margin_left = 472.0
margin_top = 112.0
margin_right = 569.0
margin_bottom = 132.0
rect_rotation = 90.0
text = "Kaffee Pause!"

[node name="Pause2" type="Button" parent="."]
margin_left = 488.0
margin_top = 392.0
margin_right = 585.0
margin_bottom = 412.0
rect_rotation = -90.0
text = "Kaffee Pause!"

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Pausemenu" parent="GUI" instance=ExtResource( 17 )]

[node name="Levelende" parent="GUI" instance=ExtResource( 18 )]
script = ExtResource( 20 )

[node name="TippEffekt" parent="." instance=ExtResource( 10 )]
position = Vector2( 151, -127 )

[node name="Wrong" type="ColorRect" parent="."]
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -8.0
margin_right = 992.0
margin_bottom = 552.0
mouse_filter = 2
color = Color( 0.713726, 0.0901961, 0.0901961, 0 )

[node name="Wrong_Red" type="AnimationPlayer" parent="Wrong"]
anims/RESET = SubResource( 34 )
anims/wrong = SubResource( 35 )

[node name="Right" type="ColorRect" parent="."]
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -8.0
margin_right = 992.0
margin_bottom = 552.0
mouse_filter = 2
color = Color( 0.713726, 0.0901961, 0.0901961, 0 )

[node name="Right_Green" type="AnimationPlayer" parent="Right"]
anims/RESET = SubResource( 38 )
anims/right = SubResource( 39 )
anims/wrong = SubResource( 40 )

[connection signal="body_entered" from="ColorRect/Area2D" to="BackgroundLeft/Ordner/Ordner_Links_1/Tab" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="ColorRect/Area2D" to="BackgroundLeft/Ordner/Ordner_Links_2/Tab" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="ColorRect/Area2D" to="BackgroundLeft/Ordner/Ordner_Links_3/Tab" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="ColorRect/Area2D" to="BackgroundLeft/Ordner/Ordner_Links_4/Tab" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="ColorRect/Area2D" to="BackgroundLeft/Ordner/Ordner_Links_5/Tab" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="ColorRect/Area2D" to="BackgroundRight/Ordner/Ordner_Rechts_1/Tab" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="ColorRect/Area2D" to="BackgroundRight/Ordner/Ordner_Rechts_2/Tab" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="ColorRect/Area2D" to="BackgroundRight/Ordner/Ordner_Rechts_3/Tab" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="ColorRect/Area2D" to="BackgroundRight/Ordner/Ordner_Rechts_4/Tab" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="ColorRect/Area2D" to="BackgroundRight/Ordner/Ordner_Rechts_5/Tab" method="_on_Area2D_body_entered"]
[connection signal="tween_completed" from="Textbox/Tween" to="Textbox" method="_on_Tween_tween_completed"]
[connection signal="input_event" from="Textbox/TutBox" to="Textbox" method="_on_TutBox_input_event"]
[connection signal="pressed" from="Pause" to="GUI/Pausemenu" method="_on_Pause_pressed"]
[connection signal="pressed" from="Pause2" to="GUI/Pausemenu" method="_on_Pause2_pressed"]
